2018-09-28  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_set_optimizable_parameters: Remove the 'select' argument

	* param/classes/stk_set_optimizable_parameters.m: Remove the
	optional 'select' argument.
	* core/@stk_model_gpposterior/stk_set_optimizable_parameters.m: Idem.
	* core/stk_set_optimizable_model_parameters.m: Idem.
	* param/estim/stk_param_estim_optim.m: Implement selection
	directly here.

2018-09-20  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_dataframe.m: Accept char arg when only one row/col (ticket #92)

	* arrays/@stk_dataframe/stk_dataframe.m: Accept char vectors (or
	strings) as `colnames` or `rownames` argument when there is only
	one column or one row.  This was, previously, only partially
	supported for char vectors, and not at all for strings.  Also,
	clarify a little bit the processing of `rownames` / `colnames'
	arguments.

2018-09-11  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_estim.m: Check if the starting points are finite

	* param/estim/stk_param_estim.m: Check if the starting points
	param0 and lnv0 are finite, i.e., do not contain NaNs or Infs.

	Refresh the index

	* admin/octpkg/INDEX: Update the index with recently introduced
	internal functions.

	Refresh quilt patches

	* admin/octpkg/patches/matlab-graphics-axis-Axes.patch: Refresh patch.
	* admin/octpkg/patches/remove-buildmex.patch: Refresh patch.
	* admin/octpkg/patches/remove-testprivatemex.patch: Refresh patch.
	* admin/octpkg/patches/stk-init-rmpath-cleanup.patch: Refresh patch.
	* admin/octpkg/patches/workaround-octave-bug-46350.patch: Refresh patch.

	stk_param_estim.m: stk_set_optimizable_parameters accepts object values

	* param/estim/stk_param_estim.m: Assume that
	stk_set_optimizable_parameters accepts object values as well.
	* param/estim/private/stk_param_check_lnv0.m: Delete unused
	private function.

2018-09-08  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_estim.m: Fix a corner case
